--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,6 +32,7 @@ main {
                 object-fit: cover;
                 object-position: top;
                 filter: grayscale(1);
+                border-radius: $border_radius;
             }
         }
 
@@ -79,6 +80,38 @@ main {
         }
     }
 
+    section.counter_section {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin-bottom: 8rem;
+        gap: 3rem;
+
+        .counter {
+            display: flex;
+            justify-content: flex-start;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 1rem;
+
+            .line {
+                content: "";
+                background: $dark100;
+                width: 100%;
+                height: .05rem;
+            }
+
+            .count_text {
+                font-size: $heading_3;
+                font-family: $open_sans;
+                font-weight: bolder;
+            }
+
+            .count_sub_text {
+                font-weight: bold;
+            }
+        }
+    }
+
     section.services_section {
         background-color: $dark100;
         padding: 4rem 8rem;
@@ -108,9 +141,10 @@ main {
 
             .card {
                 position: relative;
-                height: 60vh;
+                height: 65vh;
                 border: 1px solid #ffffff6c;
                 overflow: hidden;
+                border-radius: $border_radius;
 
                 .card_image {
                     height: 100%;
@@ -128,7 +162,7 @@ main {
                 .service_count {
                     position: absolute;
                     top: 4%;
-                    margin: 1rem;
+                    margin: 1.5rem;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -147,7 +181,7 @@ main {
                     position: absolute;
                     bottom: 4%;
                     color: $color_white;
-                    padding: 1rem;
+                    margin: 0rem 1.5rem 1rem;
 
                     .card_title {
                         margin-bottom: 2rem;
@@ -164,6 +198,8 @@ main {
                         padding-bottom: .2rem;
                         border-bottom: 1px solid #ffffff57;
                         transition: all .2s ease-in-out;
+                        text-transform: uppercase;
+                        font-size: 12px;
 
                         &:hover {
                             border-bottom: 1px solid #ffffff
@@ -174,96 +210,116 @@ main {
         }
     }
 
-    section.glimpse_of_work {
+    section.portfolio_section {
         display: flex;
-        justify-content: center;
-        align-items: center;
         flex-direction: column;
+        gap: 3rem;
 
-        h1.glimpse_title {
-            font-size: $heading_3;
-            margin-bottom: 2rem;
-            text-align: center;
+        .portfolio_section_sub_title {
+            font-weight: bold;
+            margin-bottom: 1rem;
+            color: $color_primary;
         }
 
-        .wrapper {
-            // max-width: 1100px;
-            width: 100%;
+        .portfolio_info_area {
+            display: flex;
+            justify-content: space-between;
 
-            .carousel {
-                display: grid;
-                grid-auto-flow: column;
-                grid-auto-columns: calc((100% / 3) - 12px);
-                gap: 1rem;
-                overflow-x: auto;
-                scroll-snap-type: x mandatory;
-                scroll-behavior: smooth;
-                scrollbar-width: none;
+            .portfolio_info_area_left {
+                flex: 2fr;
+                width: 200%;
 
-                &::-webkit-scrollbar {
-                    display: none;
-                }
-
-                &.dragging {
-                    scroll-behavior: auto;
-                    scroll-snap-type: none;
-
-                    .img_container {
-                        cursor: grab;
-                        user-select: none;
-                    }
-                }
-
-                &.no_transition {
-                    scroll-behavior: auto;
-                }
-
-                .img_container {
-                    height: 400px;
-                    overflow: hidden;
-                    border-radius: $border_radius;
-                    scroll-snap-align: start;
-
-                    img {
-                        height: 400px;
-                        object-fit: cover;
-                        object-fit: 50% 0;
-                    }
+                .portfolio_section_title {
+                    font-size: $heading_3;
                 }
             }
 
-            .control_button {
+            .portfolio_info_area_right {
+                width: 100%;
+                flex: 1fr;
                 display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 8rem;
-                margin-top: 2rem;
+                flex-direction: column;
+                justify-content: space-between;
 
-                .control {
-                    background: $dark75;
-                    padding: .5rem 1rem;
-                    border-radius: $border_radius;
-                    cursor: pointer;
+                .portfolio_section_btn {
+                    background: $color_primary_light;
+                    border: 1px solid $color_primary;
+                    padding: .6rem 2rem;
+                    align-self: flex-start;
+                    border-radius: 10rem;
+                    color: $color_primary;
+                    font-family: $open_sans;
+                    text-transform: uppercase;
+                    font-size: 14px;
+                    font-weight: bold;
+                    transition: all .2s ease-in-out;
 
                     &:hover {
-                        background: $dark100;
-                    }
-
-                    svg {
-                        height: 1.5rem;
-                        width: 1.5rem;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-
-                        path {
-                            fill: $color_white;
-                        }
+                        background-color: $color_primary;
+                        color: $color_white;
                     }
                 }
             }
         }
 
+        .portfolio_img_area {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 2rem;
+
+            .grid_col_span_2 {
+                grid-column: span 2;
+            }
+
+            .portfolio_img_card {
+                background-color: $dark100;
+                width: 100%;
+                overflow: hidden;
+                position: relative;
+                border-radius: $border_radius;
+
+                .portfolio_img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    opacity: 30%;
+                    transition: all 0.2s ease-in-out;
+                }
+
+                .portfolio_img_text_area {
+                    position: absolute;
+                    bottom: 0%;
+                    color: $color_white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    gap: .5rem;
+                    width: 100%;
+                    padding: 1.5rem;
+                    background: linear-gradient(180deg, #00000003, $dark75);
+
+                    .portfolio_img_title {
+                        font-family: $open_sans;
+                    }
+
+                    .portfolio_img_sub_title {
+                        font-size: 14px;
+                    }
+
+                    .line {
+                        content: "";
+                        background: $color_white;
+                        width: 100%;
+                        height: .02rem;
+                    }
+                }
+
+                &:hover>.portfolio_img {
+                    opacity: 80%;
+                }
+            }
+        }
     }
 
     section.contact_us {
@@ -328,6 +384,11 @@ main {
         }
     }
 
+    main section.counter_section {
+        margin-bottom: 4rem;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     main section.services_section {
         padding: 4rem 4rem;
 
@@ -374,7 +435,7 @@ main {
     }
 
     main section.section {
-        margin: 2rem 2rem 0;
+        margin: 4rem 2rem 0;
     }
 
     main section.about_section {
@@ -402,6 +463,21 @@ main {
             }
         }
     }
+
+
+    main section.counter_section {
+        margin-bottom: 4rem;
+        grid-template-columns: repeat(1, 1fr);
+
+        .counter {
+            gap: .5rem;
+
+            .count_text {
+                font-size: $heading_4
+            }
+        }
+    }
+
 
     main section.services_section {
         padding: 4rem 2rem;
